--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@shopify/hydrogen-react": "^2025.5.0",
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.10.1",
+    "leaflet": "^1.9.4",
     "nanostores": "^1.0.1",
     "svelte": "^5.34.9",
     "zod": "^3.25.67"
